--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -213,8 +213,8 @@
 
 .header-m-contact span {
     color: #13753E;
-    width: 66px;
-    height: 66px;
+    width: 40px;
+    height: 40px;
     border: 1px solid #707070;
     border-radius: 15px;
     font-family: "Segoe Script";
@@ -244,6 +244,10 @@
     margin-left: 26px;
 }
 
+.header-activity-item img {
+    max-width: 22px;
+    object-fit: contain;
+}
 /* Header middle End */
 
 /* bottom header start */
@@ -373,7 +377,11 @@
 
 /* main content css start */
 .main-content {
-    height: calc(100vh - 280px);
+    height: calc(100dvh - 246px);
+}
+
+.main-content.main-content-disposal {
+    height: calc(100dvh - 238px);
 }
 
 .map-body {
@@ -506,9 +514,9 @@
 /* Contact Sidebar Start */
 .contact-sidebar {
     width: 450px;
-    top: 247px;
+    top: 210px;
     left: -100%;
-    height: calc(100% - 282px);
+    height: calc(100% - 245px);
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
 }
@@ -810,10 +818,10 @@ textarea.form-control {
 
 /* Chat Sidebar Start */
 .chat-sidebar {
-    top: 247px;
+    top: 210px;
     left: -100%;
     width: 445px;
-    height: calc(100vh - 281px);
+    height: calc(100vh - 245px);
     transition: all 0.3s ease-in-out;
 }
 
@@ -883,10 +891,10 @@ textarea.form-control {
 
 /* History Sidebar Start */
 .history-sidebar {
-    top: 247px;
+    top: 210px;
     left: -100%;
     width: 360px;
-    height: calc(100vh - 281px);
+    height: calc(100vh - 245px);
     transition: all 0.3s ease-in-out;
 }
 
@@ -1068,14 +1076,14 @@ input::-webkit-inner-spin-button {
 
 /* Calendar Sidebar Start */
 .calendar-sidebar {
-    top: 247px;
+    top: 210px;
     left: -100%;
     width: 420px;
     transition: all 0.3s ease-in-out;
     background-image: url('../image/calendar-sidebar/calendar-bg.svg');
     background-repeat: no-repeat;
     background-position: top;
-    height: calc(100dvh - 282px);
+    height: calc(100dvh - 245px);
     overflow-y: auto;
 }
 
@@ -1242,10 +1250,10 @@ table.calendar-table {
 
 /* Invites Sidebar Start */
 .invites-sidebar {
-    top: 247px;
+    top: 210px;
     left: -100%;
     width: 450px;
-    height: calc(100dvh - 283px);
+    height: calc(100dvh - 245px);
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
 }
@@ -1483,12 +1491,12 @@ table.calendar-table {
 
 /* Overview Modal Start */
 .overview-accordion {
-    right: 300px;
+    right: 180px;
     left: unset;
 }
 .overview-accordion .accordion-body {
     background: #fff;
-    height: 85vh;
+    height: calc(100dvh - 270px);
     overflow-y: auto;
 }
 .overview-accordion small,.overview-main-title{
@@ -1690,7 +1698,7 @@ output {
 .ctbpopup-body{
     max-width: 420px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     max-height: 500px;
 }
 
@@ -1822,7 +1830,7 @@ height: 16px;
 }
 
 .maddie-tab-content-area {
-    height: calc(100vh - 442px);
+    height: calc(100vh - 414px);
     background: #fff;
     overflow-y: auto;
     padding: 1rem;
@@ -1931,7 +1939,7 @@ height: 16px;
 }
 
 .maddie-tank-img {
-    width: 150px;
+    max-width: 150px;
     height: auto;
 }
 
@@ -1974,8 +1982,8 @@ height: 16px;
 }
 
 .maddie-btn-iconimg{
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     padding: 6px;
     border-radius: 50%;
     box-shadow: 0 0 14px 0 #00000070;
