--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -146,11 +146,11 @@
     align-items: center;
     justify-content: center;
     left: 11px;
-    top: -46px;
+    top: -38px;
 }
 
 .header-m-content {
-    margin: 0 38px 0 214px;
+    margin: 0 24px 0 170px;
 }
 
 .header-duty-title,
@@ -225,10 +225,6 @@
     border-right: 1.5px solid #0B3E58;
 }
 
-.header-m-activity {
-    border-left: 1px solid #0B3E58;
-}
-
 .header-activity-item:hover {
     background-color: #e9e9e9;
 }
@@ -241,7 +237,7 @@
 }
 
 .header-activity-btn {
-    margin-left: 26px;
+    margin-left: 18px;
 }
 
 .header-activity-item img {
@@ -377,7 +373,7 @@
 
 /* main content css start */
 .main-content {
-    height: calc(100dvh - 260px);
+    height: calc(100dvh - 246px);
 }
 
 .main-content.main-content-disposal {
@@ -534,14 +530,16 @@
 
 .contact-search-icon {
     top: 50%;
-    right: 25px;
+    right: 18px;
     transform: translateY(-50%);
+    max-width: 20px;
+    max-height: 20px;
 }
 
 .contact-item-box {
     border: 1px solid #0B3E58;
     border-radius: 8px;
-    padding: 20px 20px 15px 15px;
+    padding: 16px;
     overflow-y: auto;
     height: 217px;
 }
@@ -1206,10 +1204,6 @@ table.calendar-table {
     color: #bbb;
 }
 
-.calendar-events {
-    top: 113px;
-}
-
 .calendar-events li {
     line-height: normal;
 }
@@ -1256,6 +1250,10 @@ table.calendar-table {
     height: calc(100dvh - 245px);
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
+}
+
+.current-drivers-body{
+    width: 400px;
 }
 
 .invites-sidebar-open {
@@ -1644,6 +1642,14 @@ output {
     width:83%;
     height:100%;
 }
+
+.driver-current-modal .modal-dialog{
+    max-width: 570px;
+}
+
+.current-drivers-body{
+    z-index: 1056;
+}
 /* Drivers Available Modal End */
 
 /* Trucking Modal Start */
@@ -1783,13 +1789,13 @@ height: 16px;
 }
 
 .ctblist-ul {
-    height: calc(100vh - 426px);
+    height: calc(100vh - 474px);
     overflow-y: auto;
 }
 
 /* maddie modal css start  */
 .maddie-custom-window {
-    width: 450px;
+    width: 400px;
     border: 2px solid #333;
     border-radius: 0 0 10px;
     overflow: hidden;
